@@ -84,6 +84,9 @@ olecfinfo
 DEPLOYMENT
 * update manuals
 
+20150328
+* added more bounds checks
+
 20150106
 * 2015 update
 
